--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appdirs==1.4.4
 asgiref==3.3.0
 astroid==2.4.2
 bcrypt==3.2.0
+certifi==2020.12.5
 cffi==1.14.3
 click==7.1.2
 distlib==0.3.1
@@ -13,6 +14,7 @@ Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 importlib-metadata==2.0.0
 isort==5.6.4
 itsdangerous==1.1.0
@@ -23,6 +25,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.18.1
 pbr==5.5.1
+pipenv==2020.11.15
 protobuf==3.11.4
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
